# molchemist

./: .gitignore  ALCHEMIST_020_RELEASE_NOTES.md  Cargo.toml  README.md  THIRD_PARTY_NOTICES.md  vercel.json
.github/workflows/: ci.yml  release.yml
crates/molchemist-cli/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
crates/molchemist-cli/src/: lib.rs  main.rs  runtime.rs
crates/molchemist-cli/tests/: cli.rs  wasm_parity.rs
crates/molchemist-cli/tests/fixtures/: README.md  Structure2D_COMPOUND_CID_93406.sdf  typst-parity.typ
crates/molchemist-core/: Cargo.toml  README.md  build.rs
crates/molchemist-core/native/: coordgen_engine.cpp  coordgen_engine.h  native_bridge.cpp
crates/molchemist-core/src/: engine.rs  formatter.rs  lib.rs  native_layout.rs
package/: README.md  THIRD_PARTY_NOTICES.md  justfile  lib.typ  molchemist_plugin.wasm  typst.toml
package/docs/: documentation.typ
package/docs/assets/: DepositedStructure_SUBSTANCE_SID_93298_Version_3.sdf  README.md  Structure2D_COMPOUND_CID_241.sdf
scripts/: build-wasm.sh  check-licenses.sh  check-wasm-sync.sh  vercel-build.sh  vercel-install.sh
wasm-plugin/: Cargo.toml
wasm-plugin/src/: lib.rs
wasm-plugins/: README.md
wasm-plugins/core/: Cargo.toml  README.md
wasm-plugins/core/src/: lib.rs
wasm-plugins/smiles-layout/: CMakeLists.txt  README.md
wasm-plugins/smiles-layout/src/: coordgen_smiles.cpp  protocol.h
