[package]
name = "molchemist-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
description = "Convert Molfile, SDF, and SMILES input into Alchemist Typst code"
license = "MIT AND BSD-3-Clause AND Apache-2.0 AND (Apache-2.0 WITH LLVM-exception)"
repository = "https://github.com/rice8y/molchemist"
readme = "README.md"
keywords = ["chemistry", "smiles", "sdf", "typst", "cli"]
categories = ["command-line-utilities", "science"]
include = [
  "src/**",
  "tests/**",
  "wasm/**",
  "LICENSE",
  "LICENSE-APACHE-2.0",
  "LICENSE-EMSCRIPTEN",
  "LICENSE-LIBCXX",
  "LICENSE-LIBCXXABI",
  "LICENSE-MUSL",
  "README.md",
  "THIRD_PARTY_NOTICES.md",
]

[[bin]]
name = "molchemist"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
wasmi = { version = "=1.0.9", default-features = false, features = ["simd"] }

[dev-dependencies]
serde_json = "1.0"
