[package]
name = "molchemist_plugin"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
wasm-minimal-protocol = { git = "https://github.com/astrale-sharp/wasm-minimal-protocol" }
molchemist-core = { path = "../../crates/molchemist-core" }
